--- a/templates/home/catalog.html.twig
+++ b/templates/home/catalog.html.twig
@@ -9,7 +9,13 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
                 <div class="shadowBart rounded text-center bg-white p-4 m-3">
                     <h2>{{ product.title|capitalize}}</h2>
-                    <img src="{{ asset('image/defaut.png') }}" alt="" class="imgDefaut">
+
+                    {% if product.picture %}
+                        <img src="{{ asset('image/product/' ~ product.picture) }}" alt="" class="imgDefaut">
+                    {% else %}
+                        <img src="{{ asset('image/defaut.png') }}" alt="" class="imgDefaut">
+                    {% endif %}
+                    
 
                     {% if product.brand %}
                         <p class="fst-italic bold mt-1">{{ product.brand.name|upper }}</p>
