--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,7 +35,7 @@
 
         <div class="text-center">
             <div>
-                <a href="">Mot de passe oublié ?</a>
+                <a href="{{path('app_forgot_password_request')}}">Mot de passe oublié ?</a>
             </div>
             <div>
                 <a href="{{ path('app_register') }}">Pas encore inscrit ?</a>
